Changed README.MD and version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-test-pv66645-rn-1",
-  "version": "0.1.0",
+  "name": "pv66645-test-2",
+  "version": "1.0.0",
   "description": "test",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
