--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index",
-  "source": "src/index",
+  "react-native": "lib/commonjs/index",
   "files": [
     "lib",
     "android",
